--- a/vue/package.json
+++ b/vue/package.json
@@ -19,7 +19,8 @@
     "bootstrap-vue": "^2.17.3",
     "server.js": "^1.0.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
