--- a/Pipfile
+++ b/Pipfile
@@ -13,8 +13,8 @@ mysql-client = "*"
 djangorestframework-api-key = "==2.*"
 selenium = "==2.53.6"
 beautifulsoup4 = "*"
-pycopy-shutil = "*"
 requests = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.8"
