--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ selenium = "==2.53.6"
 beautifulsoup4 = "*"
 requests = "*"
 django-cors-headers = "*"
+djangorestframework-jwt = "*"
 
 [requires]
 python_version = "3.8"
