--- a/vue/package.json
+++ b/vue/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.0.0",
     "bootstrap-vue": "^2.17.3",
+    "jwt-decode": "^3.1.2",
     "server.js": "^1.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
