--- a/vue/package.json
+++ b/vue/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "server.js": "^1.0.0",
     "vue": "^2.5.2",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
   },
