--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ beautifulsoup4 = "*"
 requests = "*"
 django-cors-headers = "*"
 djangorestframework-jwt = "*"
+google-auth = "*"
 
 [requires]
 python_version = "3.8"
